--- a/3D Ninja Man/3D Ninja Man/index.html
+++ b/3D Ninja Man/3D Ninja Man/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coderstar</title>
+    <title>akthacoder007</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -169,13 +169,13 @@
             </div>
             <div class="body">
                 <div class="cube" id="body">
-                    <div class="container">
-                        <div class="left"></div>
-                        <div class="right"></div>
+                    <div class="container" style="font-size: 10px;">
+                        <div class="left">ak_tha_coder007</div>
+                        <div class="right">ak_tha_coder007</div>
                         <div class="top"></div>
                         <div class="bottom"></div>
-                        <div class="front"></div>
-                        <div class="back"></div>
+                        <div class="front">ak_tha_coder007</div>
+                        <div class="back">ak_tha_coder007</div>
                     </div>
                 </div>
             </div>
