--- a/card border color chang/index.html
+++ b/card border color chang/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="card">
-        <i class="fa-solid fa-cloud-arrow-up"></i>
+        <!-- <i class="fa-solid fa-cloud-arrow-up"></i> -->
         <p><img src="akthacoder.png"></p>
     </div>
 </body>
